--- a/addons/airsend/Dockerfile
+++ b/addons/airsend/Dockerfile
@@ -2,6 +2,7 @@ ARG BUILD_FROM
 FROM $BUILD_FROM
 
 # Copy data for add-on
+COPY hassapi.class.php /home
 COPY callback.php /home
 COPY poststate.sh /home
 COPY run.sh /
@@ -14,3 +15,4 @@ RUN mkdir -p /home && cd /home && wget http://devmel.com/dl/AirSendWebService.tg
 RUN apk add php php-curl
 # Start AirSendWebService
 CMD [ "/run.sh" ]
+EXPOSE 33863
